--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>The Post It</title>
 </head>
 <body>
-<h2>Create a post</h2>
+<h1>POST IT!</h1>
+<h2>Do it NOW!</h2>
 <form action="/posts/create" method="post">
   <label for="title">Title:</label>
-  <input type="text" name="title" id="title"><br>
+  <input type="text" name="title" id="title">
+    <br>
   <label for="body">Body:</label>
-  <textarea name="body" id="body" rows="10" cols="35"></textarea><br>
-  <input type="submit" value="Submit">
+  <textarea name="body" id="body" rows="10" cols="35"></textarea>
+    <br>
+  <button>Submit</button>
 </form>
 </body>
 </html>
