--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -2,15 +2,17 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head th:replace="partials/head :: head">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Post-A-Vaganza</title>
 </head>
 <body>
 <nav th:replace="partials/navbar :: navbar"></nav>
-    <div  th:each="post : ${posts}">
-        <h2 th:text="${post.title}"> </h2>
-        <p th:replace="${post.body}"></p>
-    </div>
+    <h1>Explore our Post-A-Vaganza</h1>
+    <ul>
+        <li th:each="post : ${posts}">
+            <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}"></h2></a>
+            <p th:text="${post.body}"></p>
+        </li>
+    </ul>
 <footer th:replace="partials/footer :: footer"></footer>
-
 </body>
 </html>
