--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -8,6 +8,7 @@
     <div>
         <h2 th:text="${post.title}"></h2>
         <p th:text="${post.body}"></p>
+        <p th:text="${email}"></p>
     </div>
 </body>
 </html>
