--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -11,6 +11,15 @@
         <li th:each="post : ${posts}">
             <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}"></h2></a>
             <p th:text="${post.body}"></p>
+            <p th:text="${post.user.email}"></p>
+            <div th:if="${post.comments.size()>0}">
+                <h3>Comments</h3>
+                <ul>
+                    <li th:each="comment: ${post.comments}">
+                        <p th:text="${comment.content}"></p>
+                    </li>
+                </ul>
+            </div>
         </li>
     </ul>
 <footer th:replace="partials/footer :: footer"></footer>
