--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -11,7 +11,8 @@
         <li th:each="post : ${posts}">
             <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}"></h2></a>
             <p th:text="${post.body}"></p>
-            <p th:text="${post.user.email}"></p>
+            <p th:if="${post.user != null}" th:text="${post.user.email}"></p>
+            <p th:unless="${post.user != null}">No user</p>
             <div th:if="${post.comments.size()>0}">
                 <h3>Comments</h3>
                 <ul>
