--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pose-a-Post</title>
+    <link rel="stylesheet" href="/css/site.css">
 </head>
 <body>
     <div>
