--- a/src/main/resources/templates/posts/create.html
+++ b/src/main/resources/templates/posts/create.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-<head th:repalce="partials/head :: head"></head>
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<head th:replace="partials/head :: head"></head>
     <div class="page-wrapper">
-    <header th:repalce="partials/navbar :: navbar"></header>
+    <header th:replace="partials/navbar :: navbar"></header>
     <body>
     <div class="container grow justify-center">
         <div class="row justify-center">
             <div class="column shrink">
-                <h1>POST IT!</h1>
+                <h1 th:if="${post.id == 0}">POST IT!</h1>
+                <h2 th:if="${post.id != 0}">Editing Post #[[${post.id}]]</h2>
                 <h2>Do it NOW!</h2>
-                <form th:action="@{/posts/create}" th:method="post" th:object="${post}">
+                <form th:action="${post.id == 0} ? @{/posts/create} : @{/posts/{id}/edit(id=${post.id})}" th:method="post" th:object="${post}">
                    <div class="input-wrapper">
                        <label for="title">Title:</label>
-                       <input type="text" name="title" id="title" th:field="*{title}">
+                       <input type="text" id="title" th:field="*{title}" th:value="*{title}">
                    </div>
                     <div class="input-wrapper">
                         <label for="body">Body:</label>
@@ -22,8 +23,8 @@
                         <label for="categories">Enter a list of categories separated by commas</label>
                         <input type="text" name="categories" id="categories" th:field="*{categories}">
                     </div>
-                    <input type="hidden" th:field="*{user}">
-                    <button>Submit</button>
+                    <input type="hidden" th:field="*{user}" th:value="*{user}">
+                    <button class="btn primary">Submit</button>
                 </form>
             </div>
         </div>
