--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -11,18 +11,33 @@
         <div class="row">
             <ul class="post-grid">
                 <li th:each="post : ${posts}">
+                    <a th:href="@{|/posts/${post.id}|}">
+                        <img th:src="@{'https://picsum.phtotos/id/' + ${post.id} + '/340/200'}" alt="Post thumbnail" class="post-thumbnail">
+                    </a>
                     <a th:href="@{|/posts/${post.id}|}"><h2 th:text="${post.title}"></h2></a>
-                    <p th:text="${post.body}"></p>
-                    <p th:if="${post.user != null}" th:text="${post.user.email}"></p>
-                    <p th:unless="${post.user != null}">No user</p>
-                    <div th:if="${post.comments.size()>0}">
+                    <p th:text="${post.body}" class="excerpt"></p>
+                    <div class="d-flex align-center justify-space-between">
+                        <a th:href="@{|/posts/${post.id}|}">
+                            <p class="read-more">Read More</p>
+                        </a>
+                        <p class="comments" th:text="${post.comments.size() + ' Comments'}"></p>
+                    </div>
+                    <div class="d-flex align-center gap-5">
+                        <img th:src="@{'https://picsum.photos/id/' + ${post.id} + '/50/50'}" alt="User avatar" class="avatar">
+                        <p th:text="${post.user.username}"></p>
+                    </div>
+                    <div>
+                        <p th:if="${post.user != null}" th:text="${post.user.email}"></p>
+                        <p th:unless="${post.user != null}">No user</p>
+                    </div>
+                    <!-- <div th:if="${post.comments.size()>0}">
                         <h3>Comments</h3>
                         <ul>
                             <li th:each="comment: ${post.comments}">
                                 <p th:text="${comment.content}"></p>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                 </li>
             </ul>
         </div>
