adding to exercise for authentication

--- a/src/main/resources/templates/partials/head.html
+++ b/src/main/resources/templates/partials/head.html
@@ -1,6 +1,6 @@
 <head th:fragment="head">
     <meta charset="UTF-8">
-    <title>Post-O-Matic</title>
+    <title th:text="${title}"></title>
     <link rel="stylesheet" th:href="@{/css/resets.css}"/>
     <link rel="stylesheet" th:href="@{/css/layout.css}"/>
     <link rel="stylesheet" th:href="@{/css/site.css}"/>
