--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row">
             <ul class="post-grid">
-                <li th:each="post : ${posts}">
+                <li th:each="post : ${posts}" class="column post">
                     <a th:href="@{|/posts/${post.id}|}">
                         <img th:src="@{'https://picsum.photos/id/' + ${post.id} + '/340/200'}" alt="Post thumbnail" class="post-thumbnail">
                     </a>
