--- a/src/main/resources/templates/posts/show.html
+++ b/src/main/resources/templates/posts/show.html
@@ -15,7 +15,7 @@
         <label for="content">Comment:</label>
         <textarea name="content" id="content" rows="10" cols="20"></textarea>
         <input type="hidden" name="postId" th:value="${post.id}">
-        <button>Submit</button>
+        <button class="btn primary">Submit</button>
     </form>
 </body>
 </html>
