--- a/src/main/resources/templates/partials/navbar.html
+++ b/src/main/resources/templates/partials/navbar.html
@@ -10,24 +10,25 @@
                         <a th:href="@{/}">Home</a>
                     </li>
                     <li>
-                        <a th:href="@{/posts}">Posts</a>
+                        <form th:action="@{/logout}" th:method="post">
+                            <button>Logout</button>
+                        </form>
+                    </li>
+                    <li>
+                        <a href="/posts">Posts</a>
                         <ul>
                             <li>
-                                <a th:href="@{/posts}">View All</a>
+                                <a href="/posts">View All</a>
                             </li>
                             <li>
-                                <a th:href="@{#}">My Posts</a>
+                                <a href="#">My Posts</a>
                             </li>
                             <li>
-                                <a th:href="@{/posts/create}">Create Post</a>
+                                <a href="/posts/create">Create Post</a>
                             </li>
                         </ul>
-                    </li>
                     <li>
-                        <a th:href="@{/posts-form}">Create Post</a>
-                    </li>
-                    <li>
-                        <a th:href="@{/roll-dice}">Dice Roll</a>
+                        <a href="/roll-dice">Dice Roll</a>
                     </li>
                 </ul>
             </nav>
